# readbmp

./: COPYING  Makefile.am  README.md  configure.ac  readbmp.cpp  ref_list.txt
include/readbmp/: readbmp.h
